--- a/guestbook/guestbook-ui-deployment.yaml
+++ b/guestbook/guestbook-ui-deployment.yaml
@@ -14,7 +14,8 @@ spec:
         app: guestbook-ui
     spec:
       containers:
-      - image: gcr.io/heptio-images/ks-guestbook-demo:0.1
+      # - image: gcr.io/heptio-images/ks-guestbook-demo:0.1
+      - image: docker.io/xrlim/simple-app
         name: guestbook-ui
         ports:
         - containerPort: 80
