--- a/guestbook/guestbook-ui-deployment.yaml
+++ b/guestbook/guestbook-ui-deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: guestbook-ui
+  name: shantelle-guestbook
 spec:
   replicas: 3
   revisionHistoryLimit: 3
   selector:
     matchLabels:
-      app: guestbook-ui
+      app: shantelle-guestbook
   template:
     metadata:
       labels:
-        app: guestbook-ui
+        app: shantelle-guestbook
     spec:
       containers:
       # - image: gcr.io/heptio-images/ks-guestbook-demo:0.1
-      - image: docker.io/xrlim/simple-app
-        name: guestbook-ui
+        - image: docker.io/xrlim/simple-app:latest
+        name: shantelle-guestbook
         ports:
         - containerPort: 80
